--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ $(document).ready(function(){
 
                         </p>
                         <h6 class="card-subtitle mb-2 text-skyblue">Technologies Used: MERN </h6>
-                        <br><a hrefp="https://drive.google.com/file/d/1u1vo-Irqs7Sk8IpA_vCkniT2iOc_0rrx/view" target="_blank" class="btn btn-outline-secondary custom-btn">View Github!</a>
+                        <br><a hrefp="https://drive.google.com/file/d/1u1vo-Irqs7Sk8IpA_vCkniT2iOc_0rrx/view?usp=sharing" target="_blank" class="btn btn-outline-secondary custom-btn">View Github!</a>
                         <div class="d-flex justify-content-between align-items-center">
                          
                         </div>   
