--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h3 class="text-header">Currently seeking <span class="text-skyblue">Summer 2020</span> Co-op Opportunities</h3>
 <br>
             <a href="mailto:a5balend@uwaterloo.ca" target="_blank "class="btn btn-secondary custom-btn">Email Me</a>
-            <a href="static/AdshayanResumeV4 (1).pdf" target="_blank" class="btn btn-outline-secondary custom-btn" >View Resume</a>
+            <a href="static/AdshayanResumeV7.pdf" target="_blank" class="btn btn-outline-secondary custom-btn" >View Resume</a>
     </section></div>
            
       <div class="col-md-5">
